# spectral_analysis_of_memory

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pyproject.toml  vite.config.js  weight_dynamics_dashboard.jsx
.github/workflows/: codeql.yml
examples/: simulate.py  weight_experiment.py
memtrace/: __init__.py  analyzer.py  collector.py  correlator.py  monitor.py  weight_simulator.py
src/: main.jsx
tests/: test_core.py
