[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "memtrace-diagnostics"
version = "0.1.0"
description = "Training optimization health diagnostics via memory signal spectral analysis"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Mukshud Ahamed"}]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[project.optional-dependencies]
gpu = ["torch>=2.0"]
system = ["psutil>=5.9"]
viz = ["matplotlib>=3.6"]
all = ["torch>=2.0", "psutil>=5.9", "matplotlib>=3.6"]

[project.urls]
Homepage = "https://github.com/mukshud/memtrace-diagnostics"
Issues = "https://github.com/mukshud/memtrace-diagnostics/issues"

[tool.setuptools.packages.find]
include = ["memtrace*"]
